@@ -46,6 +46,11 @@ RANLIB = @RANLIB@
 RC = @RC@
 DLLTOOL = @DLLTOOL@
 
+YACC = yacc
+BISON = bison
+FLEX = flex
+LEX = lex
+
 INSTALL		= @HOST_INSTALL@
 INSTALL_PROGRAM	= @INSTALL_PROGRAM@
 INSTALL_DATA	= @INSTALL_DATA@
